--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div>
         <h1 class="tit" id="ARKFUTURE-NET">ARKFUTURE-NET</h1>
         <div>
-            <h2 id="ws">资源库及知识库 | RL&Repo&ResRep</h2>
+            <h2 id="ws">资源库及知识库 | Repo</h2>
             <ul>
                 <li><a href="">Gitea</a></li>
             </ul>
@@ -52,100 +52,91 @@
         <br>
         <div>
             <h2 id="irc">IRC服务 | IRC</h2>
-            <p>要在拥有 TLS/SSL 的情况下进行连接 请使用端口 6697 </p>
-            <p>要在没有 TLS/SSL 的情况下进行连接 请使用端口 6667-6669</p>
-            <p>以链接的形式:</p>
-            <ul>
-                <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
-                <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
-            </ul>
+            <p>将客户端连接到:<a>irc.arkfuture.test</a></p>
+            <p>IRC协议端口为:6667,6668,6669/6697(TLS)</p>
+            <p>Websocket协议端口为8067/8097(TLS)</p>
             <p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p>
             <p>我们为什么要使用IRC: 因为它快速 轻量 独立服务器 易扩展 等优点, 是一个稳定的协议</p>
-            <br>
-            <div>
-                <h2 id="pv">代理 | PROXY & VPN</h2>
-                <p>VPN使用SoftEtherVPN</p>
-                <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-                <ul>
-                </ul>
-            </div>
-            <br>
-            <div>
-                <h2>订阅源 | RSS/FEED/ATOM</h2>
-                <ul>
-                    <li><a href="/arkfuture/res/news.opml">新闻订阅源 [news.opml]</a></li>
-                    <li><a href="/arkfuture/res/cs.opml">网络安全情报订阅源 [cs.opml]</a></li>
-                    <li><a href="/arkfuture/res/dm.opml">动漫订阅源 [dm.opml]</a></li>
-                </ul>
-            </div>
-            <br>
-            <div>
-                <h2>小组件 | Widgets</h2>
-                <ul>
-                    <li><a href="/arkfuture/html/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
-                    <li><a href="/arkfuture/html/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
-                    <li><a href="/arkfuture/html/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件连接</a></li>
-                    <li><iframe src="/arkfuture/html/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
-                </ul>
-            </div>
-            <br>
         </div>
-
         <br>
-        <hr>
-
         <div>
-            <h1 class="tit" id="so">社交 | Social</h1>
+            <h2>订阅源 | RSS/FEED/ATOM</h2>
             <ul>
-                <p>订阅我们的社交平台账号</p>
-                <li><a href="https://cn.gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
-                <li><a href="https://x.com/arkfuturestudio">X</a></li>
-                <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
-                <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
+                <li><a href="/arkfuture/res/news.opml">新闻订阅源 [news.opml]</a></li>
+                <li><a href="/arkfuture/res/cs.opml">网络安全情报订阅源 [cs.opml]</a></li>
+                <li><a href="/arkfuture/res/dm.opml">动漫订阅源 [dm.opml]</a></li>
             </ul>
         </div>
-
         <br>
-        <hr>
-
         <div>
-            <h1 class="tit" id="li">许可证 | Licenses</h1>
+            <h2>小组件 | Widgets</h2>
             <ul>
-                <li><a href="https://www.gnu.org/licenses/">GNU开源许可</a></li>
-                <li><a href="https://creativecommons.org/licenses/">CC知识许可</a></li>
-                <li><a href="https://www.apache.org/licenses/">Apache开源许可</a></li>
-                <li><a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a></li>
+                <li><a href="/arkfuture/html/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
+                <li><a href="/arkfuture/html/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
+                <li><a href="/arkfuture/html/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件连接</a></li>
+                <li><iframe src="/arkfuture/html/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
             </ul>
-            <p>除了以上许可证,其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
         </div>
-
         <br>
-        <hr>
-
         <div>
-            <h1 class="tit">结束语 | END</h1>
-
-            <p>我们崇尚黑客精神</p>
-            <blockquote>
-                <p>黑客精神(Hacker)，这个词是用来形容那些热衷于解决问题、克服限制的人。</p>
-
-                <p>"任何职业都可以成为黑客。你可以是一个木匠黑客。不一定是高科技。只要与技能有关，并且倾心专注于你正在做的事情，你就可能成为黑客。"</p>
-
-                <cite>引自《黑客伦理与信息时代精神》</cite>
-            </blockquote>
-            <br>
-            <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
-            <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
-            <p>我们是一群追寻自己梦想的人</p>
-            <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS-GNU(开源共创及GNU精神)&CL(持续学习)</p>
-            <br>
-            <p>团队所使用的系统:{
-                <br>测试:Parrotsec,Kali;
-                <br>隐私:Tails,Qubes;
-                <br>OSINT&取证&软件分析:tsurugi,REMnux,tracelabs,sherlock,caine;
-                <br>运维&系统备份:clonezilla,rescuezilla;}
-            </p>
+            <h2>更多服务请加入我们的内部社群</h2>
         </div>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit" id="so">社交 | Social</h1>
+        <ul>
+            <li><a href="https://cn.gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
+            <li><a href="https://x.com/arkfuturestudio">X</a></li>
+            <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
+            <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
+        </ul>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit" id="li">许可证 | Licenses</h1>
+        <ul>
+            <li><a href="https://www.gnu.org/licenses/">GNU开源许可</a></li>
+            <li><a href="https://creativecommons.org/licenses/">CC知识许可</a></li>
+            <li><a href="https://www.apache.org/licenses/">Apache开源许可</a></li>
+            <li><a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a></li>
+        </ul>
+        <p>除了以上许可证,其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit">结束语 | END</h1>
+
+        <p>我们崇尚黑客精神</p>
+        <blockquote>
+            <p>黑客精神(Hacker)，这个词是用来形容那些热衷于解决问题、克服限制的人。</p>
+
+            <p>"任何职业都可以成为黑客。你可以是一个木匠黑客。不一定是高科技。只要与技能有关，并且倾心专注于你正在做的事情，你就可能成为黑客。"</p>
+
+            <cite>引自《黑客伦理与信息时代精神》</cite>
+        </blockquote>
+        <br>
+        <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
+        <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
+        <p>我们是一群追寻自己梦想的人</p>
+        <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS-GNU(开源共创及GNU精神)&CL(持续学习)</p>
+        <br>
+        <p>团队所使用的系统:{
+            <br>测试:Parrotsec,Kali;
+            <br>隐私:Tails,Qubes;
+            <br>OSINT&取证&软件分析:tsurugi,REMnux,tracelabs,sherlock,caine;
+            <br>运维&系统备份:clonezilla,rescuezilla;}
+        </p>
+    </div>
 
 </body>
 <br>
