--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <div>
             <h2 id="ws">资源库及知识库 | Repo</h2>
             <ul>
-                <li><a href="">Gitea</a></li>
+                <li><a href="https://github.com/ARKFUTURE">Github</a></li>
+                <li><a href="https://gitea.com/ARKFUTURE">Gitea</a></li>
+                <li><a href="https://gitlab.com/ARKFUTURE">Gitlab</a></li>
             </ul>
         </div>
         <br>
