--- a/arkfuture/html/conf.html
+++ b/arkfuture/html/conf.html
@@ -22,14 +22,14 @@
         <div>
             <h2>名称 支持的软件版本, 以 "!" 结尾的软件版本适配[Debian 稳定版]软件包最新版本</h2>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/i2p-tor/">i2pd & tor !</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/inspircd/README.md">inspircd !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/inspircd/">inspircd !</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/ergoircd/">ergoircd</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/hybridircd/">hybridircd !</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/ngircd/">ngircd [配置归档中,待软件包更新后解除]</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/irssi/">irssi !</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/suricata/">Suricata !</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/minecraft/">minecraftServer !</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/other/README.md">other conf</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/other/">other conf</a><br>
         </div>
 
         <h2>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</h2>
