--- a/2.html
+++ b/2.html
@@ -211,7 +211,7 @@ function onLoad()
 function PageDone()
 {
 	nickname = GetNickName("");
-	WebSocket_Connect("wss://172.24.83.171:8067/");
+	WebSocket_Connect("ws://172.24.83.171:8067/");
 }
 
 function GetNickName(err)
