--- a/2.html
+++ b/2.html
@@ -367,7 +367,7 @@ html, body {
 // 配置管理
 // ==========================================
 const CONFIG = {
-  wsUri: 'wss://172.24.83.171:8097/',
+  wsUri: 'ws://172.24.83.171:8067/',
   defaultChannel: '#abjects',
   maxMessageHistory: 200,
   reconnectAttempts: 5,
