--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2 id="irc">IRC服务 | IRC</h2>
             <p>将客户端连接到:<a>irc.arkfuture.test</a></p>
             <p>IRC协议端口为:6667,6668,6669/6697(TLS)</p>
-            <p>Websocket协议端口为8067/8097(TLS)</p>
+            <p>网页客户端<a href="/arkfuture/html/irc.html"></a></p>
             <p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p>
             <p>我们为什么要使用IRC: 因为它快速 轻量 独立服务器 易扩展 等优点, 是一个稳定的协议</p>
         </div>
