--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -297,10 +297,7 @@ html, body {
 
 .log-container {
 	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 200px;
+	inset: 0;
 	background-color: var(--clr-background3);
 	border-bottom: 2px solid var(--clr-accent);
 	display: none;
