--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -210,17 +210,16 @@ html, body {
 .ssl-warning {
 	display: none;
 	position: absolute;
-	top: 55px;
-	left: 15px;
-	right: 15px;
+	bottom: 20px;    /* 距离底部20px */
+	right: 20px;     /* 距离右侧20px */
+	max-width: 380px; /* 适当缩小宽度，适应右下角 */
 	background: linear-gradient(135deg, var(--clr-warning), #F59E0B);
 	color: #000;
-	padding: 10px 15px;
+	padding: 12px 16px;
 	border-radius: 8px;
 	font-size: 13px;
 	z-index: 200;
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-	max-width: 600px;
 }
 
 .ssl-warning.visible {
@@ -721,7 +720,7 @@ function showSSLWarning(url) {
     warning.classList.add('visible');
     setTimeout(() => {
         if (warning) warning.classList.remove('visible');
-    }, 15000);
+    }, 5000);
 }
 
 // 连接控制
