--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -1211,7 +1211,7 @@
 		} catch (e) {
 			writeToLog(`[ERROR] WebSocket创建失败: ${e.message}`);
 			onDisconnect();
-			alert(`连接失败: ${e.message}\n\n如果是SSL证书错误, 请勾选"允许无效SSL"查看解决方案`);
+			alert(`连接失败: ${e.message}\n\n如果是SSL证书错误, 请点击"SSL帮助"查看解决方案`);
 		}
 	}
 
