--- a/arkfuture/html/3.html
+++ b/arkfuture/html/3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,6 +22,7 @@
 			--clr-warning: #F59E0B;
 			--clr-success: #10B981;
 		}
+
 		@media (prefers-color-scheme: dark) {
 			:root {
 				--clr-background: #111827;
@@ -40,130 +42,509 @@
 				--clr-success: #6EE7B7;
 			}
 		}
-		* { box-sizing: border-box; }
-		html, body {
+
+		* {
+			box-sizing: border-box;
+		}
+
+		html,
+		body {
 			font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-			margin: 0; padding: 0; height: 100%; width: 100%;
-			background-color: var(--clr-background); color: var(--clr-font);
-			font-size: 14px; line-height: 1.5; overflow: hidden;
+			margin: 0;
+			padding: 0;
+			height: 100%;
+			width: 100%;
+			background-color: var(--clr-background);
+			color: var(--clr-font);
+			font-size: 14px;
+			line-height: 1.5;
+			overflow: hidden;
 		}
-		.main { display: flex; flex-direction: column; height: 100vh; width: 100%; }
+
+		.main {
+			display: flex;
+			flex-direction: column;
+			height: 100vh;
+			width: 100%;
+		}
+
 		.settings-bar {
-			flex: 0 0 50px; background-color: var(--clr-background2); border-bottom: 1px solid var(--clr-border);
-			display: flex; align-items: center; padding: 0 15px; gap: 15px; overflow-x: auto; min-height: 50px;
+			flex: 0 0 50px;
+			background-color: var(--clr-background2);
+			border-bottom: 1px solid var(--clr-border);
+			display: flex;
+			align-items: center;
+			padding: 0 15px;
+			gap: 15px;
+			overflow-x: auto;
+			min-height: 50px;
 		}
-		.settings-group { display: flex; align-items: center; gap: 8px; flex: 0 0 auto; }
-		.settings-group label { font-size: 12px; font-weight: 600; color: var(--clr-font); white-space: nowrap; }
+
+		.settings-group {
+			display: flex;
+			align-items: center;
+			gap: 8px;
+			flex: 0 0 auto;
+		}
+
+		.settings-group label {
+			font-size: 12px;
+			font-weight: 600;
+			color: var(--clr-font);
+			white-space: nowrap;
+		}
+
 		.settings-group input[type="text"] {
-			padding: 6px 10px; background-color: var(--clr-background3); color: var(--clr-font);
-			border: 1px solid var(--clr-border); border-radius: 6px; font-size: 13px; min-width: 120px; transition: all 0.2s;
+			padding: 6px 10px;
+			background-color: var(--clr-background3);
+			color: var(--clr-font);
+			border: 1px solid var(--clr-border);
+			border-radius: 6px;
+			font-size: 13px;
+			min-width: 120px;
+			transition: all 0.2s;
 		}
-		.settings-group input[type="checkbox"] { width: 16px; height: 16px; cursor: pointer; }
-		.settings-group input:focus { outline: none; border-color: var(--clr-accent); box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.1); }
+
+		.settings-group input[type="checkbox"] {
+			width: 16px;
+			height: 16px;
+			cursor: pointer;
+		}
+
+		.settings-group input:focus {
+			outline: none;
+			border-color: var(--clr-accent);
+			box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.1);
+		}
+
 		.connect-btn {
-			padding: 6px 18px; background: linear-gradient(135deg, var(--clr-accent), var(--clr-purple));
-			color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: 600; font-size: 13px;
-			white-space: nowrap; transition: all 0.2s; flex: 0 0 auto;
+			padding: 6px 18px;
+			background: linear-gradient(135deg, var(--clr-accent), var(--clr-purple));
+			color: white;
+			border: none;
+			border-radius: 6px;
+			cursor: pointer;
+			font-weight: 600;
+			font-size: 13px;
+			white-space: nowrap;
+			transition: all 0.2s;
+			flex: 0 0 auto;
 		}
-		.connect-btn:hover { transform: translateY(-1px); box-shadow: 0 4px 8px rgba(0,0,0,0.15); }
-		.connect-btn:disabled { background: var(--clr-background4); cursor: not-allowed; transform: none; box-shadow: none; }
-		.connect-btn.disconnect { background: linear-gradient(135deg, var(--clr-red), #EF4444); }
+
+		.connect-btn:hover {
+			transform: translateY(-1px);
+			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+		}
+
+		.connect-btn:disabled {
+			background: var(--clr-background4);
+			cursor: not-allowed;
+			transform: none;
+			box-shadow: none;
+		}
+
+		.connect-btn.disconnect {
+			background: linear-gradient(135deg, var(--clr-red), #EF4444);
+		}
+
 		.log-toggle-btn {
-			padding: 6px 12px; background-color: var(--clr-background4); color: var(--clr-font);
-			border: 1px solid var(--clr-border); border-radius: 6px; cursor: pointer; font-size: 12px;
-			font-weight: 500; white-space: nowrap; transition: all 0.2s;
+			padding: 6px 12px;
+			background-color: var(--clr-background4);
+			color: var(--clr-font);
+			border: 1px solid var(--clr-border);
+			border-radius: 6px;
+			cursor: pointer;
+			font-size: 12px;
+			font-weight: 500;
+			white-space: nowrap;
+			transition: all 0.2s;
 		}
-		.log-toggle-btn:hover { background-color: var(--clr-accent); color: white; }
+
+		.log-toggle-btn:hover {
+			background-color: var(--clr-accent);
+			color: white;
+		}
+
 		.connection-status {
-			display: inline-flex; align-items: center; gap: 6px; padding: 4px 10px;
-			background-color: var(--clr-background3); border: 1px solid var(--clr-border);
-			border-radius: 6px; font-size: 11px; font-weight: 500; margin-left: auto; flex: 0 0 auto; transition: all 0.3s;
+			display: inline-flex;
+			align-items: center;
+			gap: 6px;
+			padding: 4px 10px;
+			background-color: var(--clr-background3);
+			border: 1px solid var(--clr-border);
+			border-radius: 6px;
+			font-size: 11px;
+			font-weight: 500;
+			margin-left: auto;
+			flex: 0 0 auto;
+			transition: all 0.3s;
 		}
-		.connection-status.connected { border-color: var(--clr-success); background-color: rgba(16,185,129,0.1); }
-		.connection-status.disconnected { border-color: var(--clr-red); background-color: rgba(220,38,38,0.1); }
-		.connection-status .indicator { width: 8px; height: 8px; border-radius: 50%; background-color: var(--clr-border); transition: background-color 0.3s; }
-		.connection-status.connected .indicator { background-color: var(--clr-success); }
-		.connection-status.disconnected .indicator { background-color: var(--clr-red); }
+
+		.connection-status.connected {
+			border-color: var(--clr-success);
+			background-color: rgba(16, 185, 129, 0.1);
+		}
+
+		.connection-status.disconnected {
+			border-color: var(--clr-red);
+			background-color: rgba(220, 38, 38, 0.1);
+		}
+
+		.connection-status .indicator {
+			width: 8px;
+			height: 8px;
+			border-radius: 50%;
+			background-color: var(--clr-border);
+			transition: background-color 0.3s;
+		}
+
+		.connection-status.connected .indicator {
+			background-color: var(--clr-success);
+		}
+
+		.connection-status.disconnected .indicator {
+			background-color: var(--clr-red);
+		}
+
 		.ssl-warning {
-			display: none; position: absolute; bottom: 20px; right: 20px; max-width: 380px;
-			background: linear-gradient(135deg, var(--clr-warning), #F59E0B); color: #000;
-			padding: 12px 16px; border-radius: 8px; font-size: 13px; z-index: 200; box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+			display: none;
+			position: absolute;
+			bottom: 20px;
+			right: 20px;
+			max-width: 380px;
+			background: linear-gradient(135deg, var(--clr-warning), #F59E0B);
+			color: #000;
+			padding: 12px 16px;
+			border-radius: 8px;
+			font-size: 13px;
+			z-index: 200;
+			box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 		}
-		.ssl-warning.visible { display: block; }
-		.ssl-warning a { color: #000; font-weight: 600; text-decoration: underline; cursor: pointer; }
-		.chat-container { flex: 1 1 auto; display: flex; flex-direction: column; overflow: hidden; position: relative; }
+
+		.ssl-warning.visible {
+			display: block;
+		}
+
+		.ssl-warning a {
+			color: #000;
+			font-weight: 600;
+			text-decoration: underline;
+			cursor: pointer;
+		}
+
+		.chat-container {
+			flex: 1 1 auto;
+			display: flex;
+			flex-direction: column;
+			overflow: hidden;
+			position: relative;
+		}
+
 		.channels {
-			flex: 0 0 45px; background-color: var(--clr-background2); border-bottom: 1px solid var(--clr-border);
-			display: flex; align-items: center; padding: 0 10px; gap: 8px; overflow-x: auto;
+			flex: 0 0 45px;
+			background-color: var(--clr-background2);
+			border-bottom: 1px solid var(--clr-border);
+			display: flex;
+			align-items: center;
+			padding: 0 10px;
+			gap: 8px;
+			overflow-x: auto;
 		}
+
 		.channel {
-			padding: 8px 16px; background-color: var(--clr-background3); border: 1px solid var(--clr-border);
-			border-radius: 20px; cursor: pointer; font-weight: 500; font-size: 13px; transition: all 0.2s;
-			display: flex; align-items: center; gap: 6px; white-space: nowrap;
+			padding: 8px 16px;
+			background-color: var(--clr-background3);
+			border: 1px solid var(--clr-border);
+			border-radius: 20px;
+			cursor: pointer;
+			font-weight: 500;
+			font-size: 13px;
+			transition: all 0.2s;
+			display: flex;
+			align-items: center;
+			gap: 6px;
+			white-space: nowrap;
 		}
-		.channel:hover { background-color: var(--clr-background4); }
-		.channel.active { background: linear-gradient(135deg, var(--clr-accent), var(--clr-purple)); color: white; border-color: var(--clr-accent); }
-		.channel button.x { background: none; border: none; color: inherit; cursor: pointer; padding: 2px 6px; font-weight: bold; border-radius: 50%; font-size: 14px; transition: all 0.2s; }
-		.channel button.x:hover { background-color: rgba(255,255,255,0.2); }
+
+		.channel:hover {
+			background-color: var(--clr-background4);
+		}
+
+		.channel.active {
+			background: linear-gradient(135deg, var(--clr-accent), var(--clr-purple));
+			color: white;
+			border-color: var(--clr-accent);
+		}
+
+		.channel button.x {
+			background: none;
+			border: none;
+			color: inherit;
+			cursor: pointer;
+			padding: 2px 6px;
+			font-weight: bold;
+			border-radius: 50%;
+			font-size: 14px;
+			transition: all 0.2s;
+		}
+
+		.channel button.x:hover {
+			background-color: rgba(255, 255, 255, 0.2);
+		}
+
 		.log-container {
-			position: absolute; inset: 0; background-color: var(--clr-background3); border-bottom: 2px solid var(--clr-accent);
-			display: none; flex-direction: column; z-index: 100; box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+			position: absolute;
+			inset: 0;
+			background-color: var(--clr-background3);
+			border-bottom: 2px solid var(--clr-accent);
+			display: none;
+			flex-direction: column;
+			z-index: 100;
+			box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 		}
-		.log-container.visible { display: flex; }
+
+		.log-container.visible {
+			display: flex;
+		}
+
 		.log-header {
-			flex: 0 0 35px; padding: 0 15px; background-color: var(--clr-background2); border-bottom: 1px solid var(--clr-border);
-			display: flex; justify-content: space-between; align-items: center; font-weight: 600; font-size: 13px;
+			flex: 0 0 35px;
+			padding: 0 15px;
+			background-color: var(--clr-background2);
+			border-bottom: 1px solid var(--clr-border);
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			font-weight: 600;
+			font-size: 13px;
 		}
-		.log-controls { display: flex; gap: 8px; }
-		.log-controls button { padding: 4px 10px; background-color: var(--clr-background4); border: none; border-radius: 4px; cursor: pointer; font-size: 11px; transition: all 0.2s; }
-		.log-controls button:hover { background-color: var(--clr-accent); color: white; }
+
+		.log-controls {
+			display: flex;
+			gap: 8px;
+		}
+
+		.log-controls button {
+			padding: 4px 10px;
+			background-color: var(--clr-background4);
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			font-size: 11px;
+			transition: all 0.2s;
+		}
+
+		.log-controls button:hover {
+			background-color: var(--clr-accent);
+			color: white;
+		}
+
 		#logOutput {
-			flex: 1 1 auto; overflow-y: auto; padding: 10px; font-size: 11px; font-family: 'Consolas','Monaco',monospace;
-			background-color: var(--clr-background3); color: var(--clr-font); white-space: pre-wrap; word-wrap: break-word;
+			flex: 1 1 auto;
+			overflow-y: auto;
+			padding: 10px;
+			font-size: 11px;
+			font-family: 'Consolas', 'Monaco', monospace;
+			background-color: var(--clr-background3);
+			color: var(--clr-font);
+			white-space: pre-wrap;
+			word-wrap: break-word;
 		}
-		.channelcontents { flex: 1 1 auto; display: flex; overflow: hidden; padding: 10px; }
-		.channelcontent { display: flex; flex-direction: row; width: 100%; height: 100%; gap: 10px; }
-		.channelcontent nav { flex: 1 1 auto; display: flex; flex-direction: column; background-color: var(--clr-background3); border-radius: 8px; overflow: hidden; border: 1px solid var(--clr-border); }
-		.channelcontent nav h3 { flex: 0 0 auto; padding: 10px 15px; margin: 0; background-color: var(--clr-background2); border-bottom: 1px solid var(--clr-border); font-weight: 600; font-size: 14px; }
-		.channelcontent nav nav { flex: 1 1 auto; overflow-y: auto; padding: 15px; }
-		.channelcontent nav p { margin: 0; padding: 3px 0; line-height: 1.5; }
-		ul { flex: 0 0 200px; overflow-y: auto; padding: 10px; margin: 0; border-left: 1px solid var(--clr-border); list-style: none; background-color: var(--clr-background3); border-radius: 0 8px 8px 0; }
-		.channelcontents li { padding: 5px 10px; margin: 1px 0; display: flex; gap: 8px; border-radius: 4px; }
-		.channelcontents li:hover { background-color: var(--clr-background2); }
-		.channelcontents li p { margin: 0; }
-		.channelcontents li p:first-child { width: 20px; color: var(--clr-purple); font-weight: bold; text-align: center; }
-		.channelcontents li p:nth-child(2) { flex: 1; color: var(--clr-green); }
+
+		.channelcontents {
+			flex: 1 1 auto;
+			display: flex;
+			overflow: hidden;
+			padding: 10px;
+		}
+
+		.channelcontent {
+			display: flex;
+			flex-direction: row;
+			width: 100%;
+			height: 100%;
+			gap: 10px;
+		}
+
+		.channelcontent nav {
+			flex: 1 1 auto;
+			display: flex;
+			flex-direction: column;
+			background-color: var(--clr-background3);
+			border-radius: 8px;
+			overflow: hidden;
+			border: 1px solid var(--clr-border);
+		}
+
+		.channelcontent nav h3 {
+			flex: 0 0 auto;
+			padding: 10px 15px;
+			margin: 0;
+			background-color: var(--clr-background2);
+			border-bottom: 1px solid var(--clr-border);
+			font-weight: 600;
+			font-size: 14px;
+		}
+
+		.channelcontent nav nav {
+			flex: 1 1 auto;
+			overflow-y: auto;
+			padding: 15px;
+		}
+
+		.channelcontent nav p {
+			margin: 0;
+			padding: 3px 0;
+			line-height: 1.5;
+		}
+
+		ul {
+			flex: 0 0 200px;
+			overflow-y: auto;
+			padding: 10px;
+			margin: 0;
+			border-left: 1px solid var(--clr-border);
+			list-style: none;
+			background-color: var(--clr-background3);
+			border-radius: 0 8px 8px 0;
+		}
+
+		.channelcontents li {
+			padding: 5px 10px;
+			margin: 1px 0;
+			display: flex;
+			gap: 8px;
+			border-radius: 4px;
+		}
+
+		.channelcontents li:hover {
+			background-color: var(--clr-background2);
+		}
+
+		.channelcontents li p {
+			margin: 0;
+		}
+
+		.channelcontents li p:first-child {
+			width: 20px;
+			color: var(--clr-purple);
+			font-weight: bold;
+			text-align: center;
+		}
+
+		.channelcontents li p:nth-child(2) {
+			flex: 1;
+			color: var(--clr-green);
+		}
+
 		#input {
-			position: absolute; bottom: 10px; left: 10px; right: 10px; padding: 12px 15px;
-			background-color: var(--clr-background3); color: var(--clr-font); border: 1px solid var(--clr-border);
-			border-radius: 8px; font-size: 14px; transition: all 0.2s; z-index: 10;
+			position: absolute;
+			bottom: 10px;
+			left: 10px;
+			right: 10px;
+			padding: 12px 15px;
+			background-color: var(--clr-background3);
+			color: var(--clr-font);
+			border: 1px solid var(--clr-border);
+			border-radius: 8px;
+			font-size: 14px;
+			transition: all 0.2s;
+			z-index: 10;
 		}
-		#input:focus { outline: none; border-color: var(--clr-accent); box-shadow: 0 0 0 3px rgba(79,70,229,0.1); }
-		::-webkit-scrollbar { width: 8px; height: 8px; }
-		::-webkit-scrollbar-track { background: var(--clr-background); }
-		::-webkit-scrollbar-thumb { background: var(--clr-accent); border-radius: 4px; }
+
+		#input:focus {
+			outline: none;
+			border-color: var(--clr-accent);
+			box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.1);
+		}
+
+		::-webkit-scrollbar {
+			width: 8px;
+			height: 8px;
+		}
+
+		::-webkit-scrollbar-track {
+			background: var(--clr-background);
+		}
+
+		::-webkit-scrollbar-thumb {
+			background: var(--clr-accent);
+			border-radius: 4px;
+		}
+
 		@media (max-width: 768px) {
-			.settings-bar { flex-wrap: wrap; padding: 8px; gap: 10px; min-height: auto; }
-			.settings-group { flex: 1 1 45%; }
-			.settings-group input { min-width: 100px; width: 100%; }
-			.log-container { height: 40vh; }
-			.channelcontent { flex-direction: column; }
-			ul { flex: 0 0 120px; border-left: none; border-top: 1px solid var(--clr-border); }
-			#input { left: 5px; right: 5px; bottom: 5px; }
+			.settings-bar {
+				flex-wrap: wrap;
+				padding: 8px;
+				gap: 10px;
+				min-height: auto;
+			}
+
+			.settings-group {
+				flex: 1 1 45%;
+			}
+
+			.settings-group input {
+				min-width: 100px;
+				width: 100%;
+			}
+
+			.log-container {
+				height: 40vh;
+			}
+
+			.channelcontent {
+				flex-direction: column;
+			}
+
+			ul {
+				flex: 0 0 120px;
+				border-left: none;
+				border-top: 1px solid var(--clr-border);
+			}
+
+			#input {
+				left: 5px;
+				right: 5px;
+				bottom: 5px;
+			}
 		}
+
 		@media (max-width: 480px) {
-			.settings-group { flex: 1 1 100%; }
-			.channel { font-size: 12px; padding: 6px 12px; }
-			.connection-status { display: none; }
+			.settings-group {
+				flex: 1 1 100%;
+			}
+
+			.channel {
+				font-size: 12px;
+				padding: 6px 12px;
+			}
+
+			.connection-status {
+				display: none;
+			}
 		}
+
 		.ssl-help-btn {
-			padding: 6px 12px; background: linear-gradient(135deg, var(--clr-warning), #F59E0B); color: #000;
-			border: none; border-radius: 6px; cursor: pointer; font-weight: 600; font-size: 13px;
-			white-space: nowrap; transition: all 0.2s;
+			padding: 6px 12px;
+			background: linear-gradient(135deg, var(--clr-warning), #F59E0B);
+			color: #000;
+			border: none;
+			border-radius: 6px;
+			cursor: pointer;
+			font-weight: 600;
+			font-size: 13px;
+			white-space: nowrap;
+			transition: all 0.2s;
 		}
-		.ssl-help-btn:hover { transform: translateY(-1px); box-shadow: 0 4px 12px rgba(245,158,11,0.3); }
+
+		.ssl-help-btn:hover {
+			transform: translateY(-1px);
+			box-shadow: 0 4px 12px rgba(245, 158, 11, 0.3);
+		}
 	</style>
 </head>
+
 <body>
 	<div class="main">
 		<div class="header" style="background: linear-gradient(90deg, var(--clr-background2), var(--clr-background));">
@@ -408,7 +789,7 @@
 		if (autoReconnect && reconnectAttempts < maxReconnectAttempts) {
 			reconnectAttempts++;
 			const delay = reconnectDelay * reconnectAttempts;
-			writeToLog(`[重连] ${Math.floor(delay/1000)}秒后尝试第 ${reconnectAttempts}/${maxReconnectAttempts} 次重连...`);
+			writeToLog(`[重连] ${Math.floor(delay / 1000)}秒后尝试第 ${reconnectAttempts}/${maxReconnectAttempts} 次重连...`);
 			setTimeout(() => {
 				if (!isConnected && autoReconnect) {
 					writeToLog(`[重连] 正在尝试重新连接...`);
@@ -644,7 +1025,7 @@
 		const utcTime = now.toISOString().substr(11, 8);
 		let displayMessage;
 		if (username && username !== "") {
-			displayMessage = `[${utcTime}] ${username}: ${linkify(message || "")}`;
+			displayMessage = `[${utcTime}] ${username} -> ${linkify(message || "")}`;
 		} else {
 			displayMessage = `[${utcTime}] ${linkify(message || "")}`;
 		}
@@ -1101,4 +1482,5 @@
 		writeToLog(`[DEBUG] ${rawData}`);
 	}
 </script>
+
 </html>
